<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">List of Legends</string>
    <string name="search_hint">Search...</string>
    <string name="team_draft">Team Draft</string>
    <string name="loading">Loading...</string>
    <string name="share">Share</string>
    <string name="play_sound">Play Sound</string>
    <string name="audio_not_found">Audio for the champion %1$s not found.</string>
    <string name="stats">Stats:</string>
    <string name="hp">HP</string>
    <string name="hp_per_level">HP per Level</string>
    <string name="mp">MP</string>
    <string name="mp_per_level">MP per Level</string>
    <string name="move_speed">Move Speed</string>
    <string name="armor">Armor</string>
    <string name="armor_per_level">Armor per Level</string>
    <string name="spell_block">Spell Block</string>
    <string name="spell_block_per_level">Spell Block per Level</string>
    <string name="attack_range">Attack Range</string>
    <string name="hp_regen">HP Regen</string>
    <string name="hp_regen_per_level">HP Regen per Level</string>
    <string name="mp_regen">MP Regen</string>
    <string name="mp_regen_per_level">MP Regen per Level</string>
    <string name="critical_chance">Critical Chance</string>
    <string name="critical_chance_per_level">Critical Chance per Level</string>
    <string name="attack_damage">Attack Damage</string>
    <string name="attack_damage_per_level">Attack Damage per Level</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="attack_speed_per_level">Attack Speed per Level</string>
    <string name="sort_teams">Randomize Teams</string>
    <string name="blue_team">Blue Team</string>
    <string name="red_team">Red Team</string>
    <string name="load_more">Load More</string>
</resources>
